--- a/docs/starters.yml
+++ b/docs/starters.yml
@@ -1666,3 +1666,12 @@
   features:
     - Includes Contentstack Delivery API for any environment
     - Dynamic content from Contentstack CMS
+- url: https://gatsby-starter-docz.netlify.com/
+  repo: https://github.com/RobinCsl/gatsby-starter-docz
+  description: Simple starter where building your own documentation with Docz is possible
+  tags:
+    - Docz
+    - Documentation
+  features:
+    - Generate nice documentation with Docz, in addition to generating your normal Gatsby site
+    - Document your React components in .mdx files
